--- a/index.html
+++ b/index.html
@@ -245,16 +245,12 @@
     </section>
 
 
-        <footer class="bg-dark text-white pt-5 pb-3">
+        <footer class="bg-dark text-white pt-5 pb-3"> <!-- padng top (arriba)  y pading bottom (abajo) --- left/start izquierda ---- right/end derecha -->
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12 mb-3">
-                        <div class="social-icons">
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                        </div>
-                        <small class="d-block mt-2">&copy; 2025 CDTA</small>
+                      
+                        <small class="d-block mt-2">&copy; 2025 CDTA</small> <!-- es igual a display block -- mt significa margin top 2-->
                         <small>TODOS LOS DERECHOS RESERVADOS.</small>
                     </div>
                 </div>
