--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="#">  <i class="fa-solid fa-house"></i> Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#quienes">¿Quienes somos?</a>
+                        <a class="nav-link" href="#quienes"> <i class="fa-solid fa-people-arrows"></i>  ¿Quienes somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#programas">Programas</a>
+                        <a class="nav-link" href="#programas"> <i class="fa-solid fa-file-lines"></i>  Programas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#profesionales">Nuestros profesionales</a>
+                        <a class="nav-link" href="#profesionales"> <i class="fa-solid fa-user-tie"></i>  Nuestros profesionales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#donde">Donde encontrarnos</a>
+                        <a class="nav-link" href="#donde"> <i class="fa-solid fa-user-tie"></i>   Donde encontrarnos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#contacto"> <i class="fa-solid fa-envelope"></i> Contacto</a>
                     </li>
 
 
@@ -319,8 +319,9 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-12 mb-3">
-                    <div class="icons">
-                        <a href="#"><i class="fa-brands fa-facebook icon"></i></a>
+
+                    <div class="icons"> 
+                        <a href="#"><i class="fa-brands fa-facebook icon"></i></a>  
                         <a href="#"><i class="fa-brands fa-instagram icon"></i></a>
                         <a href="#"><i class="fa-brands fa-whatsapp icon"></i></a>
                     </div>
